grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: kube-system
  labels:
    app: grafana
spec:
  #type: NodePort
  ports:
    - port: 3000
  selector:
    app: grafana
